# live-crypto-viewer

./: .gitignore  pyproject.toml
.github/: CITATION.cff  SUPPORT.md
backend/src/constants/: crypto.py
backend/src/utils/: application.py  service.py
backend/src/utils/client/: __init__.py  client.py  html.py  http.py  json.py
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: config.js
frontend/src/modules/shared/utils/api/: api.js
