[project]
name = "live-crypto-viewer"
version = "1.0.0"
description = "live-crypto-viewer"
authors = [
    {name = "vladyslav-yarko",email = "vladislavv44444@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff (>=0.12.11,<0.13.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (PEP 8 style issues like spacing, indentation)
    "F",  # pyflakes (undefined variables, unused imports, etc.)
    "B",  # flake8-bugbear (likely bugs, dangerous patterns)
    "W",  # pycodestyle warnings (minor style warnings)
    "C",  # mccabe (complexity checker — too complex functions)
    "N",  # pep8-naming (enforces correct naming conventions)
    "A",  # flake8-builtins (avoid shadowing Python built-ins like `list`, `id`, etc.)
    "PT", # pytest-style – checks specific to pytest
    "I"  # isort – import sorting
]
ignore = ["E501"] # ignore line-too-long, if you want
